# pyqog

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
docs/: index.html
docs/css/: style.css
docs/en/: api.html  datasets.html  index.html  installation.html  tutorial.html
docs/js/: lang-switcher.js
docs/pt/: api.html  datasets.html  index.html  instalacao.html  tutorial.html
examples/: example_archive.py  example_basic.py  example_oecd.py  example_standard.py
pyqog/: __init__.py  cache.py  core.py  metadata.py  urls.py  utils.py
pyqog.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_cache.py  test_core.py  test_metadata.py  test_urls.py
