[metadata]
name = pyqog
version = 0.1.0
description = Python client for Quality of Government (QoG) Institute data
long_description = file: README.md
long_description_content_type = text/markdown
author = Danny de Castro
author_email = danny.soares@idp.edu.br
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pandas>=1.5.0
    requests>=2.28.0

[options.packages.find]
include = pyqog*
